# block_sparse_matmul

./: .gitignore  LICENSE  autograd.py  benchmark.py  benchmark_performance.py  benchmark_test2.py  block_mask.py  block_matrix.py  block_regular_matrix.py  block_sparse_matrix.py  full_baseline.py  kernels.py  layers.py  minimal_bench.py  pyproject.toml  test.py  test2.py  test_dense.py  train.py
block_sparse/: bench.py  stk_kernel.py  triton_kernel.py
column_block_sparse/: bench.py  torch_baseline.py  triton_kernel.py
tests/: correctness_test.py
