[project]
name = "block-sparse-matmul"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "einops>=0.8.1",
    "matplotlib>=3.10.3",
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "pytest>=8.4.1",
    "pytorch-block-sparse>=0.1.2",
    "stanford-stk>=0.7.1",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
]
